c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_decl_two_kws.c
struct struct s;  // struct keyword can only appear once in a type declaration

int main(void) {
    return 1;
}